# skill-lab

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.agent-improvement-loop/: manifest.json
.agent-improvement-loop/evals/: eval_case.template.json
.agent-improvement-loop/feedback/: feedback_item.template.json
.agent-improvement-loop/handoffs/: codex_handoff.template.md
.agent-improvement-loop/runs/: repair_record.template.json
.github/workflows/: ci.yml
docs/harness/: ACCEPTANCE.md  ARCHITECTURE.md  CODEBASE_MAP.md  DECISIONS.md  DEPRECATED_LOGIC.md  HARNESS_MODE.json  PROBLEM_REVIEW.md  REUSE_CLEANUP_REPORT.md  REUSE_INDEX.md  SPEC.md  VALIDATION_PLAN.md
docs/superpowers/plans/: 2026-07-12-initial-scaffold.md  2026-07-12-skill-lab-mvp.md
docs/superpowers/specs/: 2026-07-12-skill-lab-design.md  2026-07-12-skill-lab-mvp-design.md
src/skill_lab/: __init__.py  app.py  cli.py  codex.py  config.py  discovery.py  models.py  records.py  resolution.py
tests/: test_app.py  test_cli.py  test_codex.py  test_config.py  test_discovery.py  test_real_codex_e2e.py  test_records.py  test_resolution.py
