[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skill-lab"
version = "0.1.0"
description = "A TUI launcher for reproducible Codex skill experiments"
requires-python = ">=3.12"
dependencies = [
    "textual>=1.0",
]

[project.scripts]
skilllab = "skill_lab.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/skill_lab"]

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
